--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
       <h2>Projects</h2>
       <ul>
         <li><a href="https://github.com/tailsmonster/inventory-system">Module 1: C# Console Inventory System</a></li>
+        <li><a href="https://github.com/tailsmonster/library-management">Module 2: C# Console Library Management System</a></li>
         <li>Module 2: Coming Soon</li>
         <li><a href="https://github.com/tailsmonster/msdev-portfolio">Module 3: JS/CSS/HTML Static Portfolio Website (You Are Here)</a></li>
         <li>Module 4: Coming Soon</li>
+        <li><a href="https://github.com/tailsmonster/user-management-api">Module 5: ASP.NET Web API User Management System</a></li>
         <li>Module 5: Coming Soon</li>
         <li>Module 6: Coming Soon</li>
         <li>Module 7: Coming Soon</li>
